# GigawattPkg

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
crates/pm-cli/: Cargo.toml
crates/pm-cli/src/: lib.rs  main.rs
crates/pm-common/: Cargo.toml
crates/pm-common/src/: config.rs  error.rs  lib.rs  theme.rs
crates/pm-core/: Cargo.toml
crates/pm-core/src/: backend.rs  lib.rs  model.rs
crates/pm-integrations/: Cargo.toml
crates/pm-integrations/src/: detect.rs  lib.rs  process.rs  router.rs
crates/pm-integrations/src/arch/: mod.rs  pacman.rs  paru.rs
crates/pm-integrations/src/fedora/: dnf.rs  mod.rs
