[workspace]
members = [
    "crates/pm-cli",
    "crates/pm-core",
    "crates/pm-integrations",
    "crates/pm-common",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["GigawattPkg Contributors"]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "0.8"
which = "8.0"
owo-colors = "4.1"
